# tensorflow

./: CMakeLists.txt  tensorflow.pc.in
tensorflow/contrib/cmake/: tf_cc_ops.cmake  tf_core_cpu.cmake  tf_core_direct_session.cmake  tf_core_distributed_runtime.cmake  tf_core_framework.cmake  tf_core_kernels.cmake  tf_core_ops.cmake  tf_label_image_example.cmake  tf_models.cmake  tf_python.cmake  tf_shared_lib.cmake  tf_static_lib.cmake  tf_stream_executor.cmake  tf_tests.cmake  tf_tools.cmake  tf_tutorials.cmake
tensorflow/core/kernels/: cwise_op_gpu_select.cu.cc  sparse_tensor_dense_matmul_op_gpu.cu.cc  summary_interface.cc  summary_interface.h  summary_interface_test.cc  summary_kernels.cc
tensorflow/core/ops/: summary_ops.cc
tensorflow/stream_executor/cuda/: cuda_gpu_executor.cc
